<resources>
    <string name="app_name">Paws Pet N Track</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="mark_button">MARK</string>
    <string name="new_package_button">NEW\nPACKAGE</string>
    <string name="add_button">ADD DOG</string>
    <string name="packages_button">PACKAGES</string>
    <string name="history_button">HISTORY</string>
    <string name="attendance_button">ATTENDANCE</string>
    <string name="name_text">Name</string>
    <string name="birthday_text">Birthday</string>
    <string name="package_text">Packages:</string>
    <string name="Ten_Day_Button">10 Day</string>
    <string name="Twenty_Day_Button">20 Day</string>
    <string name="Save_Button">Save Changes</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>