<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/box_inset_layout_padding"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".Home">

    <LinearLayout
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/divider"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Monday,\nFebruary 31, 2020"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <Button
            android:id="@+id/MarkButton"
            android:layout_width="180dp"
            android:layout_height="135dp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/mark"
            android:layout_marginVertical="5dp"
            android:onClick="onMark"
            android:text="@string/mark_button" />

        <Button
            android:id="@+id/NewPackageButton"
            android:layout_width="180dp"
            android:layout_height="135dp"
            android:layout_marginHorizontal="5dp"
            android:layout_toEndOf="@+id/MarkButton"
            android:backgroundTint="@color/new_package"
            android:layout_marginVertical="5dp"
            android:onClick="onNewPackage"
            android:text="@string/new_package_button" />

        <Button
            android:id="@+id/AddButton"
            android:layout_width="180dp"
            android:layout_height="135dp"
            android:layout_below="@+id/MarkButton"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/add"
            android:layout_marginVertical="5dp"
            android:onClick="onAdd"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/PackagesButton"
            android:layout_width="180dp"
            android:layout_height="135dp"
            android:layout_below="@+id/NewPackageButton"
            android:layout_marginHorizontal="5dp"
            android:layout_toEndOf="@+id/AddButton"
            android:backgroundTint="@color/packages"
            android:layout_marginVertical="5dp"
            android:onClick="onPackages"
            android:text="@string/packages_button" />

        <Button
            android:id="@+id/AttendanceButton"
            android:layout_width="180dp"
            android:layout_height="135dp"
            android:layout_below="@+id/AddButton"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/attendance"
            android:layout_marginVertical="5dp"
            android:onClick="onAttendance"
            android:text="@string/attendance_button" />

        <Button
            android:id="@+id/HistoryButton"
            android:layout_width="180dp"
            android:layout_height="135dp"
            android:layout_toEndOf="@+id/AttendanceButton"
            android:layout_below="@+id/PackagesButton"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/history"
            android:onClick="onHistory"
            android:text="@string/history_button" />


    </RelativeLayout>
</LinearLayout>